@@ -1,3 +1,5 @@
+* Support Genshi expressions in email title
+
 Version 5.6.0 - 2020-05-04
 * Bug fixes (see mercurial logs for details)
 
